pkgs/dartcv_core/src/core.h

/**
 * @brief Create empty Mat

 * ALL return values with a type of `Pointer of Struct`,
 * e.g., Mat, the internal pointer (Mat.ptr) MUST be NULL
 * otherwise the memory of mat.ptr pointed to will NOT be freed correctly.
 * Mat* mat = (Mat*)malloc(sizeof(Mat));
 * CvStatus *status = Mat_New(mat);
 * Mat_Close(mat);
 *
 * @param rval Mat*
 * @return CvStatus
 */
CvStatus *Mat_New(Mat *rval);
CvStatus *Mat_NewFromScalar(const Scalar ar, int rows, int cols, int type, Mat *rval);
CvStatus *Mat_NewFromBytes(int rows, int cols, int type, void *buf, Mat *rval);
CvStatus *Mat_NewFromVecPoint(VecPoint vec, Mat *rval);
CvStatus *Mat_NewFromVecPoint2f(VecPoint2f vec, Mat *rval);
void Mat_Close(MatPtr m);
CvStatus *Mat_MultiplyMat(Mat m, Mat val);
CvStatus *Mat_Mul(Mat m, Mat val, Mat *dst, double scale);
CvStatus *Mat_MultiplyUChar(Mat m, uint8_t val);
CvStatus *Mat_MultiplySChar(Mat m, int8_t val);
CvStatus *Mat_MultiplyI16(Mat m, int16_t val);
CvStatus *Mat_MultiplyU16(Mat m, uint16_t val);
CvStatus *Mat_MultiplyI32(Mat m, int32_t val);
CvStatus *Mat_MultiplyFloat(Mat m, float_t val);
CvStatus *Mat_MultiplyF64(Mat m, double_t val);
CvStatus *Mat_MultiplyMatrix(Mat x, Mat y, Mat *rval);
CvStatus *Mat_MinMaxIdx(Mat m, double *minVal, double *maxVal, int *minIdx, int *maxIdx);
CvStatus *Mat_MinMaxLoc(Mat m, double *minVal, double *maxVal, Point *minLoc, Point *maxLoc);
CvStatus *Mat_MixChannels(VecMat src, VecMat dst, VecI32 fromTo);
CvStatus *Mat_MulSpectrums(Mat a, Mat b, Mat c, int flags, bool conjB);
CvStatus *Mat_Multiply(Mat src1, Mat src2, Mat dst, double scale, int dtype);