pkgs/dartcv_core/src/core_async.h

CvStatus *
Mat_NewFromScalar_Async(const Scalar s, int rows, int cols, int type, CvCallback_1 callback);
CvStatus *
Mat_NewFromBytes_Async(int rows, int cols, int type, void *buf, int step, CvCallback_1 callback);
CvStatus *Mat_NewFromVecPoint2f_Async(VecPoint2f vec, CvCallback_1 callback);