pkgs/dartcv_core/lib/src/g/core.g.dart


  ffi.Pointer<CvStatus> Mat_MinMaxIdx(
    Mat m,
    ffi.Pointer<ffi.Double> minVal,
    ffi.Pointer<ffi.Double> maxVal,
    ffi.Pointer<ffi.Int> minIdx,
    ffi.Pointer<ffi.Int> maxIdx,
  ) {
    return _Mat_MinMaxIdx(
      m,
      minVal,
      maxVal,
      minIdx,
      maxIdx,
    );
  }

  late final _Mat_MinMaxIdxPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Int>,
              ffi.Pointer<ffi.Int>)>>('Mat_MinMaxIdx');
  late final _Mat_MinMaxIdx = _Mat_MinMaxIdxPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat,
          ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Int>,
          ffi.Pointer<ffi.Int>)>();

  ffi.Pointer<CvStatus> Mat_MinMaxLoc(
    Mat m,
    ffi.Pointer<ffi.Double> minVal,
    ffi.Pointer<ffi.Double> maxVal,
    ffi.Pointer<Point> minLoc,
    ffi.Pointer<Point> maxLoc,
  ) {
    return _Mat_MinMaxLoc(
      m,
      minVal,
      maxVal,
      minLoc,
      maxLoc,
    );
  }

  late final _Mat_MinMaxLocPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<Point>,
              ffi.Pointer<Point>)>>('Mat_MinMaxLoc');
  late final _Mat_MinMaxLoc = _Mat_MinMaxLocPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Double>, ffi.Pointer<Point>, ffi.Pointer<Point>)>();

  ffi.Pointer<CvStatus> Mat_MixChannels(
    VecMat src,
    VecMat dst,
    VecI32 fromTo,
  ) {
    return _Mat_MixChannels(
      src,
      dst,
      fromTo,
    );
  }

  late final _Mat_MixChannelsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              VecMat, VecMat, VecI32)>>('Mat_MixChannels');
  late final _Mat_MixChannels = _Mat_MixChannelsPtr.asFunction<
      ffi.Pointer<CvStatus> Function(VecMat, VecMat, VecI32)>();

  ffi.Pointer<CvStatus> Mat_Mul(
    Mat m,
    Mat val,
    ffi.Pointer<Mat> dst,
    double scale,
  ) {
    return _Mat_Mul(
      m,
      val,
      dst,
      scale,
    );
  }

  late final _Mat_MulPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, Mat, ffi.Pointer<Mat>, ffi.Double)>>('Mat_Mul');
  late final _Mat_Mul = _Mat_MulPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Mat, ffi.Pointer<Mat>, double)>();

  ffi.Pointer<CvStatus> Mat_MulSpectrums(
    Mat a,
    Mat b,
    Mat c,
    int flags,
    bool conjB,
  ) {
    return _Mat_MulSpectrums(
      a,
      b,
      c,
      flags,
      conjB,
    );
  }

  late final _Mat_MulSpectrumsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, Mat, Mat, ffi.Int, ffi.Bool)>>('Mat_MulSpectrums');
  late final _Mat_MulSpectrums = _Mat_MulSpectrumsPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, int, bool)>();

  ffi.Pointer<CvStatus> Mat_Multiply(
    Mat src1,
    Mat src2,
    Mat dst,
    double scale,
    int dtype,
  ) {
    return _Mat_Multiply(
      src1,
      src2,
      dst,
      scale,
      dtype,
    );
  }

  late final _Mat_MultiplyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, Mat, Mat, ffi.Double, ffi.Int)>>('Mat_Multiply');
  late final _Mat_Multiply = _Mat_MultiplyPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, double, int)>();

  ffi.Pointer<CvStatus> Mat_MultiplyF64(
    Mat m,
    double val,
  ) {
    return _Mat_MultiplyF64(
      m,
      val,
    );
  }

  late final _Mat_MultiplyF64Ptr = _lookup<
          ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Mat, double_t)>>(
      'Mat_MultiplyF64');
  late final _Mat_MultiplyF64 = _Mat_MultiplyF64Ptr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, double)>();

  ffi.Pointer<CvStatus> Mat_MultiplyFloat(
    Mat m,
    double val,
  ) {
    return _Mat_MultiplyFloat(
      m,
      val,
    );
  }

  late final _Mat_MultiplyFloatPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Mat, float_t)>>(
          'Mat_MultiplyFloat');
  late final _Mat_MultiplyFloat = _Mat_MultiplyFloatPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, double)>();

  ffi.Pointer<CvStatus> Mat_MultiplyI16(
    Mat m,
    int val,
  ) {
    return _Mat_MultiplyI16(
      m,
      val,
    );
  }

  late final _Mat_MultiplyI16Ptr = _lookup<
          ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Mat, ffi.Int16)>>(
      'Mat_MultiplyI16');
  late final _Mat_MultiplyI16 = _Mat_MultiplyI16Ptr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, int)>();

  ffi.Pointer<CvStatus> Mat_MultiplyI32(
    Mat m,
    int val,
  ) {
    return _Mat_MultiplyI32(
      m,
      val,
    );
  }

  late final _Mat_MultiplyI32Ptr = _lookup<
          ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Mat, ffi.Int32)>>(
      'Mat_MultiplyI32');
  late final _Mat_MultiplyI32 = _Mat_MultiplyI32Ptr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, int)>();

  ffi.Pointer<CvStatus> Mat_MultiplyMat(
    Mat m,
    Mat val,
  ) {
    return _Mat_MultiplyMat(
      m,
      val,
    );
  }

  late final _Mat_MultiplyMatPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Mat, Mat)>>(
          'Mat_MultiplyMat');
  late final _Mat_MultiplyMat = _Mat_MultiplyMatPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Mat)>();

  ffi.Pointer<CvStatus> Mat_MultiplyMatrix(
    Mat x,
    Mat y,
    ffi.Pointer<Mat> rval,
  ) {
    return _Mat_MultiplyMatrix(
      x,
      y,
      rval,
    );
  }

  late final _Mat_MultiplyMatrixPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, Mat, ffi.Pointer<Mat>)>>('Mat_MultiplyMatrix');
  late final _Mat_MultiplyMatrix = _Mat_MultiplyMatrixPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Mat, ffi.Pointer<Mat>)>();

  ffi.Pointer<CvStatus> Mat_MultiplySChar(
    Mat m,
    int val,
  ) {
    return _Mat_MultiplySChar(
      m,
      val,
    );
  }

  late final _Mat_MultiplySCharPtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Mat, ffi.Int8)>>(
      'Mat_MultiplySChar');
  late final _Mat_MultiplySChar = _Mat_MultiplySCharPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, int)>();

  ffi.Pointer<CvStatus> Mat_MultiplyU16(
    Mat m,
    int val,
  ) {
    return _Mat_MultiplyU16(
      m,
      val,
    );
  }

  late final _Mat_MultiplyU16Ptr = _lookup<
          ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Mat, ffi.Uint16)>>(
      'Mat_MultiplyU16');
  late final _Mat_MultiplyU16 = _Mat_MultiplyU16Ptr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, int)>();

  ffi.Pointer<CvStatus> Mat_MultiplyUChar(
    Mat m,
    int val,
  ) {
    return _Mat_MultiplyUChar(
      m,
      val,
    );
  }

  late final _Mat_MultiplyUCharPtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Mat, ffi.Uint8)>>(
      'Mat_MultiplyUChar');
  late final _Mat_MultiplyUChar = _Mat_MultiplyUCharPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, int)>();

  /// @brief Create empty Mat
  ///
  /// ALL return values with a type of `Pointer of Struct`,
  /// e.g., Mat, the internal pointer (Mat.ptr) MUST be NULL
  /// otherwise the memory of mat.ptr pointed to will NOT be freed correctly.
  /// Mat* mat = (Mat*)malloc(sizeof(Mat));
  /// CvStatus *status = Mat_New(mat);
  /// Mat_Close(mat);
  ///
  /// @param rval Mat*
  /// @return CvStatus
  ffi.Pointer<CvStatus> Mat_New(
    ffi.Pointer<Mat> rval,
  ) {
    return _Mat_New(
      rval,
    );
  }

  late final _Mat_NewPtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<CvStatus> Function(ffi.Pointer<Mat>)>>(
      'Mat_New');
  late final _Mat_New = _Mat_NewPtr.asFunction<
      ffi.Pointer<CvStatus> Function(ffi.Pointer<Mat>)>();

  ffi.Pointer<CvStatus> Mat_NewFromBytes(
    int rows,
    int cols,
    int type,
    ffi.Pointer<ffi.Void> buf,
    ffi.Pointer<Mat> rval,
  ) {
    return _Mat_NewFromBytes(
      rows,
      cols,
      type,
      buf,
      rval,
    );
  }

  late final _Mat_NewFromBytesPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(ffi.Int, ffi.Int, ffi.Int,
              ffi.Pointer<ffi.Void>, ffi.Pointer<Mat>)>>('Mat_NewFromBytes');
  late final _Mat_NewFromBytes = _Mat_NewFromBytesPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          int, int, int, ffi.Pointer<ffi.Void>, ffi.Pointer<Mat>)>();

  ffi.Pointer<CvStatus> Mat_NewFromBytes_Async(
    int rows,
    int cols,
    int type,
    ffi.Pointer<ffi.Void> buf,
    int step,
    imp1.CvCallback_1 callback,
  ) {
    return _Mat_NewFromBytes_Async(
      rows,
      cols,
      type,
      buf,
      step,
      callback,
    );
  }

  late final _Mat_NewFromBytes_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              ffi.Int,
              ffi.Int,
              ffi.Int,
              ffi.Pointer<ffi.Void>,
              ffi.Int,
              imp1.CvCallback_1)>>('Mat_NewFromBytes_Async');
  late final _Mat_NewFromBytes_Async = _Mat_NewFromBytes_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          int, int, int, ffi.Pointer<ffi.Void>, int, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> Mat_NewFromScalar(
    Scalar ar,
    int rows,
    int cols,
    int type,
    ffi.Pointer<Mat> rval,
  ) {
    return _Mat_NewFromScalar(
      ar,
      rows,
      cols,
      type,
      rval,
    );
  }

  late final _Mat_NewFromScalarPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Scalar, ffi.Int, ffi.Int, ffi.Int,
              ffi.Pointer<Mat>)>>('Mat_NewFromScalar');
  late final _Mat_NewFromScalar = _Mat_NewFromScalarPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Scalar, int, int, int, ffi.Pointer<Mat>)>();

  ffi.Pointer<CvStatus> Mat_NewFromScalar_Async(
    Scalar s,
    int rows,
    int cols,
    int type,
    imp1.CvCallback_1 callback,
  ) {
    return _Mat_NewFromScalar_Async(
      s,
      rows,
      cols,
      type,
      callback,
    );
  }

  late final _Mat_NewFromScalar_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Scalar, ffi.Int, ffi.Int, ffi.Int,
              imp1.CvCallback_1)>>('Mat_NewFromScalar_Async');
  late final _Mat_NewFromScalar_Async = _Mat_NewFromScalar_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Scalar, int, int, int, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> Mat_NewFromVecPoint(
    VecPoint vec,
    ffi.Pointer<Mat> rval,
  ) {
    return _Mat_NewFromVecPoint(
      vec,
      rval,
    );
  }

  late final _Mat_NewFromVecPointPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              VecPoint, ffi.Pointer<Mat>)>>('Mat_NewFromVecPoint');
  late final _Mat_NewFromVecPoint = _Mat_NewFromVecPointPtr.asFunction<
      ffi.Pointer<CvStatus> Function(VecPoint, ffi.Pointer<Mat>)>();

  ffi.Pointer<CvStatus> Mat_NewFromVecPoint2f(
    VecPoint2f vec,
    ffi.Pointer<Mat> rval,
  ) {
    return _Mat_NewFromVecPoint2f(
      vec,
      rval,
    );
  }

  late final _Mat_NewFromVecPoint2fPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              VecPoint2f, ffi.Pointer<Mat>)>>('Mat_NewFromVecPoint2f');
  late final _Mat_NewFromVecPoint2f = _Mat_NewFromVecPoint2fPtr.asFunction<
      ffi.Pointer<CvStatus> Function(VecPoint2f, ffi.Pointer<Mat>)>();

  ffi.Pointer<CvStatus> Mat_NewFromVecPoint2f_Async(
    VecPoint2f vec,
    imp1.CvCallback_1 callback,
  ) {
    return _Mat_NewFromVecPoint2f_Async(
      vec,
      callback,
    );
  }
